fix display on narrow screen

--- a/assets/css/post-single.css
+++ b/assets/css/post-single.css
@@ -4,11 +4,19 @@
     position: relative;
     min-height: calc(100vh);
     max-width: calc(var(--main-width) + var(--gap) * 2 + 60px * 2) ;
-    margin-top: calc(var(--header-height) + 8px);
+    margin-top: calc(var(--header-height) + 48px);
     padding: calc(var(--gap) + 60px);
     padding-top: calc(var(--gap) + 8px);
     background-color: var(--theme);
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, .1);
+}
+
+@media screen and (max-width: 650px) {
+    .single .main {
+        margin-top: var(--header-height);
+        padding-left: var(--gap);
+        padding-right: var(--gap);
+    }
 }
 
 .single-cover img {
@@ -46,48 +54,41 @@
     color: var(--content);
 }
 
-.post-content h3 {
-    margin: 1em 0 24px 0;
-    font-weight: 400;
-}
-
 .post-content h1 {
-    margin: 40px auto 32px auto;
-    font-size: 40px;
+    margin: 2em auto 1.5em auto;
+    font-size: 2.5em;
 }
 
 .post-content h2 {
-    margin: 32px auto 24px auto;
+    margin: 1.5em auto 1em auto;
     font-size: 1.5em;
 }
 
 .post-content h3 {
-    margin: 1em 0 24px 0;
-    font-size: 24px;
-    font-weight: 400;
+    font-family: 'Noto Sans SC', sans-serif;
+    margin: 1.3em 0 1em 0;
+    font-size: 1.1em;
+    font-weight: 700;
 }
 
 .post-content h4 {
     font-family: 'Noto Sans SC', sans-serif;
-    font-size: 16px;
-    margin: 1em 0 24px 0;
-    font-size: 24px;
-    font-weight: 700;
+    font-size: 1.1em;
+    margin: 1.3em 0 1em 0;
+    font-weight: 400;
 }
 
 .post-content h5 {
     font-family: 'Noto Sans SC', sans-serif;
-    font-size: 14px;
-    margin: 1em 0 24px 0;
-    font-size: 24px;
+    font-size: 1em;
+    margin: 1.3em 0 1em 0;
     font-weight: 400;
 }
 
 .post-content h6 {
     font-family: 'Noto Sans SC', sans-serif;
-    font-size: 12px;
-    margin: 1em 0 24px 0;
-    font-size: 24px;
+    font-size: 1em;
+    margin: 1.3em 0 1em 0;
     font-weight: 400;
     text-decoration: underline;
 }
@@ -238,9 +239,10 @@
 
 .post-content blockquote {
     margin: 0 calc(var(--gap) * -1);
-    padding: 0 32px;
+    padding: 0 var(--gap);
     border-left: 2px solid var(--primary);
     opacity: 0.5;
+    font-style: italic;
 }
 
 .post-content hr {
